project title changed.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       rel="stylesheet"
     />
     <title>Testimonial Grid</title>
+     <link
+      rel="shortcut icon"
+      type="image/png"
+      href="images/favicon-32x32.png"
+    />
     <link rel="stylesheet" href="./css/output.css" />
   </head>
   <body class="bg-gray-200">
